@@ -1,3 +1,9 @@
+2008-04-09  Reinhold Kainhofer  <reinhold@kainhofer.com>  (tiny change)
+
+	* makeinfo/insertion.c (begin_insertion): do not indent via
+	whitespace for html, since we already do <blockquote>.
+	Reported 30 Mar 2008 00:56:56.
+
 2008-04-02  Jim Meyering  <jim@meyering.net>  (tiny change)
 
 	* doc/texinfo.tex: fix typos in comments.
